Make frozen Pyzo work for Linux again, and on Qt5

--- a/pyzo/resources/fonts/linux_fonts.conf
+++ b/pyzo/resources/fonts/linux_fonts.conf
@@ -56,21 +56,21 @@
   Serif faces
  -->
 	<alias>		
-		<family>FreeSerif</family>
+		<family>DejaVu Serif</family>
 		<default><family>serif</family></default>
 	</alias>
 <!--
   Sans-serif faces
  -->
 	<alias>		
-		<family>FreeSans</family>
+		<family>DejaVu Sans</family>
 		<default><family>sans-serif</family></default>
 	</alias>
 <!--
   Monospace faces
  -->
  	<alias>
-		<family>FreeMono</family>
+		<family>DejaVu Sans Mono</family>
 		<default><family>monospace</family></default>
 	</alias>
 <!--
