--- a/setup.cfg
+++ b/setup.cfg
@@ -8,6 +8,6 @@ max_line_length = 88
 exclude: test_*.py,docs/*,build/*,dist/*,_feedstock/*,pyzo/util/qt/,
     pyzo/util/paths.py,pyzo/resources/tutorial.py
 
-extend-ignore = F821, E203, E501, E231, E401, E402, E265, E266, E302, W293, W605
+extend-ignore = F821, E203, E501, E231, E401, E402, E262, E265, E266, E302, E731, W293, W605
 
 [tool:pytest]
