--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@
 
 max_line_length = 88
 
-exclude: test_*.py,docs/*,build/*,dist/*,_feedstock/*,pyzo/util/qt/,
+exclude: test_*.py,docs/*,build/*,dist/*,frozen/*,_feedstock/*,pyzo/util/qt/,
     pyzo/util/paths.py,pyzo/resources/tutorial.py
 
 extend-ignore = F821, E203, E501, E231, E401, E402, E262, E265, E266, E302, E731, W293, W605
