--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,7 +51,6 @@ jobs:
       targetType: inline
       script: |
         set -ex
-        # Set-ExecutionPolicy Bypass -Scope Process -Force; iex ((New-Object System.Net.WebClient).DownloadString('https://chocolatey.org/install.ps1'))
         choco install innosetup
   - task: Bash@3
     displayName: Lint (black & flake8)
@@ -77,7 +76,6 @@ jobs:
       script: |
         set -ex
         pytest --junit-xml=results.xml tests || true
-
         # Fail the task if results.xml was not created
         if [[ ! -f results.xml ]]
         then
@@ -106,7 +104,7 @@ jobs:
 
 - job: Release
   dependsOn: Build
-  # condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'))
+  condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'))
   pool:
     vmImage: ubuntu-16.04
   steps:
@@ -123,18 +121,18 @@ jobs:
         fi
   - task: UsePythonVersion@0
     displayName: Select Python
-    # condition: and(succeeded(), eq(variables['IS_TAG_BUILD'], '1'))
+    condition: and(succeeded(), eq(variables['IS_TAG_BUILD'], '1'))
     inputs:
       versionSpec: $(PY_VERSION)
   - task: DownloadBuildArtifacts@0
     displayName: Download dist
-    # condition: and(succeeded(), eq(variables['IS_TAG_BUILD'], '1'))
+    condition: and(succeeded(), eq(variables['IS_TAG_BUILD'], '1'))
     inputs:
       artifactName: frozen
       downloadPath: .
   - task: GithubRelease@1
     displayName: GitHub Release
-    # condition: and(succeeded(), eq(variables['IS_TAG_BUILD'], '1'))
+    condition: and(succeeded(), eq(variables['IS_TAG_BUILD'], '1'))
     inputs:
       gitHubConnection: github.com_almarklein
       repositoryName: 'pyzo/pyzo'
