Build binaries in CI (#671)
* tweak setup.py a bit, and install from sdist on ci

* tweak readme a bit

* move things from wiki to main repo

* freezing for ci

* bump version in case artifact upload somehow goes

* fix linux tarfile hopefully

* try that GH release logic

* fix tar.gz

* fix force GH release

* restore condition in pipeline script

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,8 +42,16 @@ jobs:
       script: |
         set -ex
         python -m pip install -U pip
-        pip install -U PyQt5
+        pip install -U pyqt5
         pip install -U pytest black flake8 pyinstaller
+  - task: Bash@3
+    displayName: Install inno setup (on Windows)
+    condition: and(succeeded(), eq(variables['Agent.OS'], 'Windows'))
+    inputs:
+      targetType: inline
+      script: |
+        set -ex
+        choco install innosetup
   - task: Bash@3
     displayName: Lint (black & flake8)
     condition: and(succeeded(), eq(variables['LINT'], '1'))
@@ -59,7 +67,8 @@ jobs:
       targetType: inline
       script: |
         set -ex
-        python setup.py sdist install
+        python setup.py sdist
+        pip install $(echo "$(Build.SourcesDirectory)" | sed -e 's/\\/\//g')/dist/*.tar.gz
   - task: Bash@3
     displayName: Test
     inputs:
@@ -67,7 +76,6 @@ jobs:
       script: |
         set -ex
         pytest --junit-xml=results.xml tests || true
-
         # Fail the task if results.xml was not created
         if [[ ! -f results.xml ]]
         then
@@ -85,7 +93,9 @@ jobs:
     inputs:
       targetType: inline
       script: |
-        python freezeScript2.py
+        python freeze/freezeScript.py
+        rm -rf ./frozen/pyzo
+        rm -rf ./frozen/pyzo.app
   - task: PublishBuildArtifacts@1
     displayName: Publish distributions
     inputs:
@@ -118,7 +128,7 @@ jobs:
     displayName: Download dist
     condition: and(succeeded(), eq(variables['IS_TAG_BUILD'], '1'))
     inputs:
-      artifactName: dist
+      artifactName: frozen
       downloadPath: .
   - task: GithubRelease@1
     displayName: GitHub Release
@@ -127,8 +137,11 @@ jobs:
       gitHubConnection: github.com_almarklein
       repositoryName: 'pyzo/pyzo'
       assets: |
-        dist/*.whl
-        dist/*.tar.gz
+        frozen/*.zip
+        frozen/*.tar.gz
+        frozen/*.exe
+        frozen/*.msi
+        frozen/*.dmg
       isDraft: true
       addChangeLog: false
       assetUploadMode: replace
