--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,32 +11,62 @@ variables:
   PY_ARCH: x64
   PY_VERSION: 3.7
 
+
 jobs:
+
 - job: Build
+
   strategy:
     matrix:
-      Linux:
+      Linux-tester:
         vmImage: ubuntu-16.04
         SDIST: 1
         LINT: 1
-      MacOS:
+        TEST: 1
+      Linux-64:
+        vmImage: ubuntu-16.04
+        ARCH: 64
+        DOCKERIMAGE: manylinux2010_x86_64
+      MacOS-64:
         vmImage: macOS-10.14
         MACOSX_DEPLOYMENT_TARGET: '10.13'
-      Windows:
+        TEST: 1
+      Windows-64:
         vmImage: vs2017-win2016
+        TEST: 1
       Windows-32:
         vmImage: vs2017-win2016
         PY_ARCH: x86
+        TEST: 1
+
   pool:
     vmImage: $(vmImage)
+
   steps:
+  - task: Bash@3
+    displayName: Docker build
+    condition: and(succeeded(), neq(variables['DOCKERIMAGE'], ''))
+    inputs:
+      targetType: inline
+      script: |
+        set -ex
+        CID=$(docker create -t -w /tmp/pyzo -v $PWD:/tmp/src:ro quay.io/pypa/$(DOCKERIMAGE) bash -c "\
+          cp -r /tmp/src/. . && \
+          rm -rf ./frozen)
+        docker start -ai $CID
+        mkdir -p frozen
+        docker cp $CID:/tmp/pyzo/frozen/. ./frozen/.
+        docker rm $CID
+        rm -rf ./frozen/pyzo
   - task: UsePythonVersion@0
     displayName: Select Python
+    condition: and(succeeded(), eq(variables['DOCKERIMAGE'], ''))
     inputs:
       versionSpec: $(PY_VERSION)
       architecture: $(PY_ARCH)
   - task: Bash@3
     displayName: Install development requirements
+    condition: and(succeeded(), eq(variables['DOCKERIMAGE'], ''))
     inputs:
       targetType: inline
       script: |
@@ -63,6 +93,7 @@ jobs:
         flake8 .
   - task: Bash@3
     displayName: Install sdist
+    condition: and(succeeded(), eq(variables['TEST'], '1'))
     inputs:
       targetType: inline
       script: |
@@ -71,6 +102,7 @@ jobs:
         pip install $(echo "$(Build.SourcesDirectory)" | sed -e 's/\\/\//g')/dist/*.tar.gz
   - task: Bash@3
     displayName: Test
+    condition: and(succeeded(), eq(variables['TEST'], '1'))
     inputs:
       targetType: inline
       script: |
@@ -83,6 +115,7 @@ jobs:
           exit 1
         fi
   - task: PublishTestResults@2
+    condition: and(succeeded(), eq(variables['TEST'], '1'))
     inputs:
       testResultsFiles: results.xml
       mergeTestResults: true
@@ -90,6 +123,7 @@ jobs:
       testRunTitle: Test $(vmImage)
   - task: Bash@3
     displayName: Freeze
+    condition: and(succeeded(), eq(variables['DOCKERIMAGE'], ''))
     inputs:
       targetType: inline
       script: |
@@ -102,11 +136,16 @@ jobs:
       pathtoPublish: frozen
       artifactName: frozen
 
+
 - job: Release
+
   dependsOn: Build
+
   condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'))
+
   pool:
     vmImage: ubuntu-16.04
+
   steps:
   - task: Bash@3
     displayName: git tag == git branch
