--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,10 +24,10 @@ jobs:
         TEST: 1
       Linux-64:
         vmImage: ubuntu-16.04
-        #DOCKERIMAGE: manylinux2014_x86_64
-        #FREEZE: 0 because freezing must only happen on container
-        TEST: 1
-        FREEZE: 1
+        DOCKERIMAGE: manylinux2014_x86_64
+        FREEZE: 0 because freezing must only happen on container
+        #TEST: 1
+        #FREEZE: 1
       MacOS-64:
         vmImage: macOS-10.14
         MACOSX_DEPLOYMENT_TARGET: '10.13'
@@ -58,7 +58,7 @@ jobs:
           cp -r /tmp/src/. . && \
           rm -rf ./frozen && \
           /opt/python/cp37-cp37m/bin/python -m pip install -U pip &&\
-          /opt/python/cp37-cp37m/bin/python -m pip install -U pyqt5 pyinstaller &&\
+          /opt/python/cp37-cp37m/bin/python -m pip install -U pyqt5 pyinstaller==3.5 &&\
           /opt/python/cp37-cp37m/bin/python -m pip install . &&\
           /opt/python/cp37-cp37m/bin/python freeze/freezeScript.py &&\
           rm -rf ./frozen/pyzo")
@@ -80,7 +80,7 @@ jobs:
       script: |
         set -ex
         python -m pip install -U pip
-        pip install -U pyside2
+        pip install -U pyqt5
         pip install -U pytest black flake8 pyinstaller
   - task: Bash@3
     displayName: Install inno setup (on Windows)
