try older pyversion for Linux

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,6 +26,7 @@ jobs:
         vmImage: ubuntu-16.04
         TEST: 1
         FREEZE: 1
+        PY_VERSION: 3.5
       MacOS-64:
         vmImage: macOS-10.14
         MACOSX_DEPLOYMENT_TARGET: '10.13'
@@ -58,7 +59,7 @@ jobs:
         set -ex
         python -m pip install -U pip
         pip install -U pyqt5
-        pip install -U pytest black flake8 pyinstaller==3.5
+        pip install -U pytest black flake8 pyinstaller==3.6
   - task: Bash@3
     displayName: Install inno setup (on Windows)
     condition: eq(variables['Agent.OS'], 'Windows')
