--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -59,7 +59,7 @@ jobs:
         set -ex
         python -m pip install -U pip
         pip install -U pyqt5
-        pip install -U pytest black flake8 pyinstaller==3.6
+        pip install -U pytest pyinstaller==3.6
   - task: Bash@3
     displayName: Install inno setup (on Windows)
     condition: eq(variables['Agent.OS'], 'Windows')
@@ -75,6 +75,7 @@ jobs:
       targetType: inline
       script: |
         set -ex
+        pip install -U black flake8
         black --check .
         flake8 .
   - task: Bash@3
