--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -61,7 +61,7 @@ jobs:
         set -ex
         $(PY_EXE) -m pip install -U pip
         $(PY_EXE) -m pip install -U pyqt5
-        $(PY_EXE) -m pip install -U pytest black flake8 pyinstaller==3.6
+        $(PY_EXE) -m pip install -U pytest pyinstaller==3.6
   - task: Bash@3
     displayName: Install inno setup (on Windows)
     condition: eq(variables['Agent.OS'], 'Windows')
@@ -77,6 +77,7 @@ jobs:
       targetType: inline
       script: |
         set -ex
+        $(PY_EXE) -m pip install -U black flake8
         black --check .
         flake8 .
   - task: Bash@3
