--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -62,7 +62,7 @@ jobs:
         set -ex
         sudo add-apt-repository -y ppa:deadsnakes/ppa
         sudo apt-get update
-        sudo apt-get install python3.6
+        sudo apt-get install python3.6 python3.6-dev
   - task: Bash@3
     displayName: Install development requirements
     inputs:
