--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -58,9 +58,9 @@ jobs:
         CID=$(docker create -t -w /tmp/pyzo -v $PWD:/tmp/src:ro $(DOCKERIMAGE) bash -c "\
           cp -r /tmp/src/. . && \
           rm -rf ./frozen && \
-          sudo add-apt-repository -y ppa:deadsnakes/ppa
-          sudo apt-get update
-          sudo apt-get install python3.6 python3.6-dev
+          add-apt-repository -y ppa:deadsnakes/ppa
+          apt-get update
+          apt-get install python3.6 python3.6-dev
           python3.6 -m pip install -U pip &&\
           python3.6 -m pip install -U pyqt5 pyinstaller &&\
           python3.6 -m pip install . &&\
