--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -59,10 +59,10 @@ jobs:
           cp -r /tmp/src/. . && \
           rm -rf ./frozen && \
           apt-get update
-          apt-get install software-properties-common python-software-properties
+          apt-get install -y software-properties-common python-software-properties
           add-apt-repository -y ppa:deadsnakes/ppa
           apt-get update
-          apt-get install python3.6 python3.6-dev
+          apt-get install -y python3.6 python3.6-dev
           python3.6 -m pip install -U pip &&\
           python3.6 -m pip install -U pyqt5 pyinstaller &&\
           python3.6 -m pip install . &&\
