--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -64,8 +64,9 @@ jobs:
         CID=$(docker create -t -w /tmp/pyzo -v $PWD:/tmp/src:ro $(DOCKERIMAGE) bash -c "\
           cp -r /tmp/src/. . && \
           rm -rf ./frozen && \
+          sudo apt-get install python3 python3-dev python3-pip python3-pyqt5
           python3 -m pip install -U pip &&\
-          python3 -m pip install -U pyqt5 pyinstaller &&\
+          python3 -m pip install -U pyinstaller &&\
           python3 -m pip install . &&\
           python3 freeze/freezeScript.py &&\
           rm -rf ./frozen/pyzo")
