--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,7 +34,7 @@ jobs:
         TEST: 0
         FREEZE: 0
         #PY_EXE: python
-        DOCKERIMAGE: ubuntu:18.04
+        DOCKERIMAGE: ubuntu:16.04
       Build-MacOS-64:
         vmImage: macOS-10.13
         MACOSX_DEPLOYMENT_TARGET: '10.13'
@@ -65,7 +65,7 @@ jobs:
           cp -r /tmp/src/. . && \
           rm -rf ./frozen && \
           apt-get update
-          apt-get install python3 python3-dev python3-pip python3-pyqt5 &&\
+          apt-get install -y python3 python3-dev python3-pip python3-pyqt5 &&\
           python3 -m pip install -U pip &&\
           python3 -m pip install -U pyinstaller &&\
           python3 -m pip install . &&\
