--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -65,7 +65,7 @@ jobs:
           cp -r /tmp/src/. . && \
           rm -rf ./frozen && \
           apt-get update
-          apt-get install -y python3 python3-dev python3-pip python3-pyqt5 &&\
+          apt-get install -y python3 python3-dev python3-pip python3-pyside2 &&\
           python3 -m pip install -U pip &&\
           python3 -m pip install -U https://github.com/pyinstaller/pyinstaller/archive/develop.zip &&\
           python3 -m pip install . &&\
@@ -89,7 +89,7 @@ jobs:
       script: |
         set -ex
         $(PY_EXE) -m pip install -U pip setuptools
-        $(PY_EXE) -m pip install -U pyqt5
+        $(PY_EXE) -m pip install -U pyside2
         $(PY_EXE) -m pip install -U pytest pyinstaller
   - task: Bash@3
     displayName: Install inno setup (on Windows)
