--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -67,7 +67,7 @@ jobs:
           apt-get update
           apt-get install -y python3 python3-dev python3-pip python3-pyqt5 &&\
           python3 -m pip install -U pip &&\
-          python3 -m pip install -U https://github.com/pyinstaller/pyinstaller/archive/develop.zip &&\
+          python3 -m pip install -U pyinstaller &&\
           python3 -m pip install . &&\
           python3 freeze/freezeScript.py &&\
           rm -rf ./frozen/pyzo")
