--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -67,7 +67,7 @@ jobs:
           apt-get update
           apt-get install -y python3 python3-dev python3-pip python3-pyqt5 &&\
           python3 -m pip install -U pip &&\
-          python3 -m pip install -U pyinstaller &&\
+          python3 -m pip install -U pyinstaller==4.6 &&\
           python3 -m pip install . &&\
           python3 freeze/freezeScript.py &&\
           rm -rf ./frozen/pyzo")
@@ -90,7 +90,7 @@ jobs:
         set -ex
         $(PY_EXE) -m pip install -U pip setuptools
         $(PY_EXE) -m pip install -U pyqt5
-        $(PY_EXE) -m pip install -U pytest pyinstaller
+        $(PY_EXE) -m pip install -U pytest pyinstaller==4.6
   - task: Bash@3
     displayName: Install inno setup (on Windows)
     condition: eq(variables['Agent.OS'], 'Windows')
