--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,14 +78,13 @@ jobs:
             pyversion: '3.10'
             qtlib: pyside6
     env:
-      DISPLAY: ':99.0'
+      #DISPLAY: ':99.0'
     steps:
     - uses: actions/checkout@v2
     - name: Setup os
       if: matrix.os == 'ubuntu-latest'
       run: |
-        sudo apt install libxkbcommon-x11-0 libxcb-icccm4 libxcb-image0 libxcb-keysyms1 libxcb-randr0 libxcb-render-util0 libxcb-xinerama0 libxcb-xfixes0
-        /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -screen 0 1920x1200x24 -ac +extension GLX
+        sudo apt-get install libegl1-mesa
     - name: Set up Python ${{ matrix.pyversion }}
       uses: actions/setup-python@v2
       with:
