do a test run on ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -98,4 +98,6 @@ jobs:
     - name: Test on repo
       run: |
           pytest -v tests
-    # todo: add a dry-run or something so we actually boot Pyzo and close it
+    - name: Run Pyzo
+      run: |
+          python pyzo --test
