--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
 
-  win-amd_64:
+  win_amd64:
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v2
@@ -20,7 +20,7 @@ jobs:
       run: |
           python -m pip install --upgrade pip
           pip install -U pyside6 pyinstaller
-          choco install innosetup --version=5.6.1
+    # Not needed because already installed: choco install innosetup --version=5.6.1
     - name: Freeze
       run: |
           cd freeze
@@ -33,14 +33,101 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         path: |
-          dist/*.exe
           dist/*.zip
+          dist/*.exe
+        name: dist
+
+  win32:
+    runs-on: windows-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python 3.10
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.10'
+        architecture: x86
+    - name: Install dependencies
+      run: |
+          python -m pip install --upgrade pip
+          pip install -U pyside6 pyinstaller
+    - name: Freeze
+      run: |
+          cd freeze
+          python pyzo_freeze.py
+          python pyzo_package.py
+    - name: Test frozen
+      run: |
+          python pyzo_test_frozen.py
+    - name: Upload distributions
+      uses: actions/upload-artifact@v2
+      with:
+        path: |
+          dist/*.zip
+        name: dist
+
+  macos_amd64:
+    runs-on: macos-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python 3.10
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.10'
+    - name: Install dependencies
+      run: |
+          python -m pip install --upgrade pip
+          pip install -U pyside6 pyinstaller
+    - name: Freeze
+      run: |
+          cd freeze
+          python pyzo_freeze.py
+          python pyzo_package.py
+    - name: Test frozen
+      run: |
+          python pyzo_test_frozen.py
+    - name: Upload distributions
+      uses: actions/upload-artifact@v2
+      with:
+        path: |
+          dist/*.zip
+          dist/*.dmg
+        name: dist
+
+  linux_amd64:
+    runs-on: ubuntu-18.04
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python 3.10
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.10'
+    - name: Install dependencies
+      run: |
+          python -m pip install --upgrade pip
+          pip install -U pyside6 pyinstaller
+          sudo apt install -y libdbus-1-3 libxkbcommon-x11-0 libxcb-icccm4 \
+            libxcb-image0 libxcb-keysyms1 libxcb-randr0 libxcb-render-util0 \
+            libxcb-xinerama0 libxcb-xfixes0 libxcb-shape0
+    - name: Freeze
+      run: |
+          cd freeze
+          python pyzo_freeze.py
+          python pyzo_package.py
+    - name: Test frozen
+      run: |
+          xvfb-run --auto-servernum python pyzo_test_frozen.py
+    - name: Upload distributions
+      uses: actions/upload-artifact@v2
+      with:
+        path: |
+          dist/*.zip
+          dist/*.tar.gz
         name: dist
 
   publish:
     name: Publish binaries to Github
     runs-on: ubuntu-latest
-    needs: [ win-amd_64 ]
+    needs: [ win_amd64, win32, macos_amd64, linux_amd64 ]
     if: success() && startsWith(github.ref, 'refs/tags/v')
     steps:
     - uses: actions/checkout@v2
