--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ on:
 jobs:
 
   lint-build:
-    name: Linting
+    name: Test linting
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
